--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "Node bindings for Poppler's pdffonts CLI",
   "main": "./lib/pdffonts.js",
   "scripts": {
+    "build": "node-gyp rebuild",
+    "cover": "lcov -c -d build/Debug/obj.target/pdffonts/src -o coverage.info && lcov -e coverage.info '*pdffonts.cc' -o coverage.info",
+    "cover:html": "npm run cover && genhtml coverage.info -o coverage",
+    "coveralls": "npm run cover && cat coverage.info | coveralls",
     "lint": "eslint .",
     "release:major": "changelog -M && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && npm version major && git push origin && git push origin --tags",
     "release:minor": "changelog -m && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && npm version minor && git push origin && git push origin --tags",
     "release:patch": "changelog -p && git add CHANGELOG.md && git commit -m 'updated CHANGELOG.md' && npm version patch && git push origin && git push origin --tags",
-    "test": "node-gyp rebuild && mocha test --require test/setup.js --recursive --timeout 30000"
+    "test": "node-gyp --debug rebuild && mocha test --require test/setup.js --recursive --timeout 30000"
   },
   "repository": {
     "type": "git",
@@ -32,6 +36,7 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
+    "coveralls": "^2.11.9",
     "eslint": "^1.10.3",
     "eslint-config-lob": "^1.0.1",
     "generate-changelog": "^1.0.1",
