--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,9 @@
 {
-  "extends": "lob",
+  "extends": "eslint-config-lob",
   "globals": {
     "expect": false
+  },
+  "parserOptions": {
+    "ecmaVersion": 2018
   }
 }
