--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.1.1",
   "description": "Node bindings for Poppler's pdffonts CLI",
   "main": "./lib/pdffonts.js",
-  "engines": { "node" : ">=12.0.0" },
+  "engines": {
+    "node": ">=12.0.0"
+  },
   "scripts": {
     "build": "node-gyp rebuild",
     "cover": "lcov -c -d build/Debug/obj.target/pdffonts/src -o coverage.info && lcov -e coverage.info '*pdffonts.cc' -o coverage.info",
@@ -38,8 +40,8 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "coveralls": "^3.0.9",
-    "eslint": "6.7.2",
-    "eslint-config-lob": "4.0.0",
+    "eslint": "^4.19.1",
+    "eslint-config-lob": "^4.0.0",
     "generate-changelog": "^1.8.0",
     "mocha": "^6.2.2"
   }
