--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,22 +2,12 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/node:6.11.1
+      - image: alpine:3.10
     working_directory: ~/pdffonts
     steps:
       - checkout
 
-      - run:
-          name: Install system dependencies
-          command: |
-            sudo sh -c 'echo "deb http://deb.debian.org/debian/ jessie main" > /etc/apt/sources.list'
-            sudo sh -c 'echo "deb-src http://deb.debian.org/debian/ jessie main" >> /etc/apt/sources.list'
-            sudo sh -c 'echo "deb http://security.debian.org/ jessie/updates main" >> /etc/apt/sources.list'
-            sudo sh -c 'echo "deb-src http://security.debian.org/ jessie/updates main" >> /etc/apt/sources.list'
-            sudo sh -c 'echo "deb http://archive.debian.org/debian jessie-backports main" >> /etc/apt/sources.list'
-            sudo sh -c 'echo "deb-src http://archive.debian.org/debian jessie-backports main" >> /etc/apt/sources.list'
-            sudo apt-get update -o Acquire::Check-Valid-Until=false -o Acquire::CompressionTypes::Order::=gz
-            sudo apt-get install -y --no-install-recommends g++-4.9 libpoppler-private-dev poppler-data lcov
+      - setup_remote_docker
 
       - run:
           name: Install Node dependencies
