--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.1.1",
   "description": "Node bindings for Poppler's pdffonts CLI",
   "main": "./lib/pdffonts.js",
+  "engines": {
+    "node": ">=12.0.0"
+  },
   "scripts": {
     "build": "node-gyp rebuild",
     "cover": "lcov -c -d build/Debug/obj.target/pdffonts/src -o coverage.info && lcov -e coverage.info '*pdffonts.cc' -o coverage.info",
@@ -31,16 +34,15 @@
   },
   "homepage": "https://github.com/lob/pdffonts#readme",
   "dependencies": {
-    "bindings": "^1.2.1",
-    "nan": "^2.3.3"
+    "bindings": "^1.5.0",
+    "nan": "^2.14.0"
   },
   "devDependencies": {
-    "chai": "^3.5.0",
-    "coveralls": "^2.11.9",
-    "eslint": "4.8.0",
-    "eslint-config-lob": "3.0.0",
-    "eslint-plugin-lob": "1.0.1",
-    "generate-changelog": "^1.0.1",
-    "mocha": "^2.4.5"
+    "chai": "^4.2.0",
+    "coveralls": "^3.0.9",
+    "eslint": "^4.19.1",
+    "eslint-config-lob": "^4.0.0",
+    "generate-changelog": "^1.8.0",
+    "mocha": "^6.2.2"
   }
 }
