--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,12 +2,13 @@ version: 2
 jobs:
   build:
     docker:
-      - image: alpine:3.10
+      - image: alpine:3.14
     working_directory: ~/pdffonts
     steps:
       - checkout
 
       - setup_remote_docker:
+          version: 20.10.6
           docker_layer_caching: true
 
       - run:
@@ -30,11 +31,11 @@ jobs:
 
       - run:
           name: Run linter
-          command: docker exec -t "$CIRCLE_PROJECT_REPONAME-container" yarn lint
+          command: docker exec -t "$CIRCLE_PROJECT_REPONAME-container" npm run lint
 
       - run:
           name: Run tests
-          command: docker exec -t "$CIRCLE_PROJECT_REPONAME-container" yarn test
+          command: docker exec -t "$CIRCLE_PROJECT_REPONAME-container" npm test
 
       - run:
           name: Enforce coverage
