--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,7 +9,7 @@ env:
 
 jobs:
   ci:
-    name: Build & Test
+    name: Build and Test
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
