--- a/package.json
+++ b/package.json
@@ -1,11 +1,8 @@
 {
   "name": "@lob/pdffonts",
-  "version": "3.1.1",
+  "version": "3.2.0",
   "description": "Node bindings for Poppler's pdffonts CLI",
   "main": "./lib/pdffonts.js",
-  "engines": {
-    "node": ">=12.0.0"
-  },
   "scripts": {
     "build": "node-gyp rebuild",
     "cover": "lcov -c -d build/Debug/obj.target/pdffonts/src -o coverage.info && lcov -e coverage.info '*pdffonts.cc' -o coverage.info",
@@ -35,7 +32,7 @@
   "homepage": "https://github.com/lob/pdffonts#readme",
   "dependencies": {
     "bindings": "^1.5.0",
-    "nan": "^2.14.0"
+    "node-addon-api": "^5.0.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
