--- a/package.json
+++ b/package.json
@@ -34,6 +34,10 @@
     "bindings": "^1.5.0",
     "node-addon-api": "^5.0.0"
   },
+  "engines": {
+    "node": ">=20.6.0",
+    "npm": ">=9.1.0"
+  },
   "devDependencies": {
     "chai": "^4.2.0",
     "coveralls": "^3.0.9",
