--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,6 +19,12 @@ jobs:
       - name: Install node and npm
         uses: './.github/actions/install-node-and-npm'
 
+      - name: Install system dependencies
+        run: sudo bash ./scripts/install-system-dependencies-debian.sh
+
+      - name: Install poppler
+        run: sudo bash ./scripts/install-poppler-debian.sh
+
       - name: Install dependencies
         run: npm install --silent
 
