--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "npm": ">=9.1.0"
   },
   "devDependencies": {
+    "@stylistic/eslint-plugin": "^5.4.0",
     "chai": "^4.2.0",
     "coveralls": "^3.0.9",
     "eslint": "^9.36.0",
